# pymmcore-nano

./: .clang-format  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  Makefile  README.md  example.py  gcovr.cfg  index.html  justfile  meson.build  meson_options.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_explore_devices.py  z.py
.github/workflows/: ci.yml  deploy.yml  docs.yml
api/: index.html
docs/: bridge-devices.md
patches/: README.txt  cpp17.patch  img_meta.patch
scripts/: Doxyfile  README.md  add_docstrings.py  build_stubs.py  clang_check.py  extract_version.py  generate_dist.py  patch_c14_c17.py  patch_sources.py  pyproject.toml  update_sources.py
search/: search_index.json
src/: DeviceHandle.cpp  _pymmcore_nano.cc  _pymmcore_nano.pyi  bridge_devices.h  vector_as_tuple.h
src/mmCoreAndDevices/: README.md
src/mmCoreAndDevices/DeviceAdapters/: build.xml  meson.build
src/mmCoreAndDevices/DeviceAdapters/DemoCamera/: meson.build
src/mmCoreAndDevices/DeviceAdapters/NotificationTester/: meson.build
src/mmCoreAndDevices/DeviceAdapters/SequenceTester/: meson.build
src/mmCoreAndDevices/DeviceAdapters/Utilities/: meson.build
src/mmCoreAndDevices/MMCore/: MMCore.cpp  PythonMockDevices.h
src/pymmcore_nano/: __init__.py  _pymmcore_nano.pyi  protocols.py
subprojects/: mmcore.wrap  msgpack-cxx.wrap
subprojects/packagefiles/boost/: meson.build
subprojects/packagefiles/mmcore/: 0001-unload-adapter-from-registry.patch  0002-mock-adapter-ownership-transfer.patch  0003-validate-sequence-lengths-in-load-methods.patch
subprojects/packagefiles/msgpack-cxx/: meson.build
tests/: conftest.py  test_autofocus.py  test_bindings.py  test_bridge_devices.py  test_callbacks.py  test_camera_device.py  test_camera_exposure_sequences.py  test_comprehensive_demo_devices.py  test_configuration.py  test_constants.py  test_core.py  test_core_features.py  test_edge_cases_and_errors.py  test_image.py  test_image_processors.py  test_logging.py  test_mmcore_coverage.py  test_mock_device_adapter.py  test_shutters.py  test_simple_mock_verification.py  test_stages.py  test_state_devices.py  test_utils.py  test_xy_stage_sequences.py  test_z_stage_sequences.py
tests/mock_devices/: __init__.py  test_comprehensive_mock_devices.py  test_mock_device_adapter.py
wheelhouse/: pymmcore_nano-11.10.0.74.0-cp39-cp39-macosx_11_0_arm64.whl
