[build-system]
requires = [
    'meson-python',
    'nanobind',          # for stubgen
    'typing_extensions', # for stubgen (should be declared by nanobind)
    'ruff',              # for stubgen
]
build-backend = 'mesonpy'

[project]
name = "pymmcore-nano"
requires-python = ">=3.10"
dynamic = ['version']
description = "CMMCore wrapper for Python, using nanobind"
readme = "README.md"
dependencies = ["numpy"]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "meson-python>=0.17.1",
    "nanobind",
    "mypy>=1.13.0",
    "ninja>=1.11.1.2",
    "pdbpp>=0.10.3; sys_platform != 'win32'",
    "pre-commit>=4.0.1",
    "pytest>=8.0",
    "ruff>=0.8.0",
    "pytest-cov>=6.0.0",
    "gcovr>=8.2",
    "rich>=13.9.4",
]

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = ["error"]

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true

[tool.coverage.run]
omit = ['subprojects/']
source = ["pymmcore_nano", "mmCoreAndDevices"]

[tool.cibuildwheel]
# Skip 32-bit builds, musllinux, and PyPy wheels on all platforms
# Note: use of PTHREAD_MUTEX_RECURSIVE_NP in DeviceThreads.h
# is specific to glibc and not available in musl-libc
skip = ["*-manylinux_i686", "*-musllinux*", "*-win32", "pp*"]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
test-requires = "pytest"
test-command = 'pytest "{project}/tests" -v'
test-skip = "*-macosx_arm64"

[tool.cibuildwheel.macos]
# https://cibuildwheel.readthedocs.io/en/stable/faq/#apple-silicon
archs = ["x86_64", "arm64"]